@@ -1,6 +1,6 @@
 from typing import List
 
-from pydantic.v1 import BaseModel, Field
+from pydantic import BaseModel, Field
 
 
 class BaseEncoder(BaseModel):
