@@ -2,7 +2,7 @@ import os
 from time import sleep
 from typing import Any, List, Optional
 
-from pydantic.v1 import PrivateAttr
+from pydantic import PrivateAttr
 
 from muzlin.encoders import BaseEncoder
 from muzlin.utils.defaults import EncoderDefault
