@@ -1,6 +1,6 @@
 from enum import Enum
 
-from pydantic.v1 import BaseModel
+from pydantic import BaseModel
 
 
 class EncoderType(Enum):
